@@ -20,6 +20,7 @@
 * Add byXid method to DataPointQuery and DataSourceQuery in script environments
 * Making Log4J configuration fully asynchronous to improve performance
 * Adding system setting for HTTP session timeout
+* Adding module definition to let modules add 'utilities' to the Mango Javascript context
 
 *Version 3.4.5*
 * Content Security Policy (CSP) is now disabled by default and the configuration options have changed, please review the new setting names and update your env.properties file if you want to continue using CSP
